--- a/style.css
+++ b/style.css
@@ -4,8 +4,137 @@
   box-sizing: border-box;
 }
 
+header h1,
+section h2,
+section h3 {
+  font-family: 'Bungee', cursive;
+  font-weight: normal;
+}
+
+body,
+input,
+textarea {
+  font-family: 'Roboto', sans-serif;
+}
+
 header {
   padding: 16px 0;
   background-color:blue;
   color:aliceblue;
+}
+
+header nav li {
+  display: inline; 
+  margin-left: 16px;
+  font-size: 18px;
+}
+
+header nav li a {
+  color:aliceblue;
+  text-decoration: none;
+}
+
+.container {
+  max-width: 1280px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+header .container,
+section .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.brads-list img {
+  height: 24px;
+}
+
+.brads-list li {
+  display: inline;
+  margin-right: 8px;
+}
+
+section .container {
+  align-items: flex-start;
+}
+
+section {
+  padding: 24px 0;
+  color:blue;
+}
+
+section h2 {
+  margin-bottom: 16px;
+}
+
+section p {
+  margin-bottom: 8px;
+}
+
+.store-front {
+  margin-right: 32px;
+}
+
+.social img {
+  height: 24px;
+}
+
+.social li {
+  display: inline;
+  margin-right: 8px;
+}
+
+.social li a {
+  text-decoration: none;
+}
+
+#contact .container {
+  display: block;
+}
+
+.contact-metods {
+  display: flex;
+  justify-content: space-between;
+}
+
+form input,
+form textarea,
+form button {
+  display: block;
+  width: 320px;
+  margin-bottom: 8px;
+  padding: 8px;
+}
+
+form textarea {
+  resize: none;
+  height: 180px;
+}
+
+section h3 {
+  margin-bottom: 16px;
+}
+
+form button {
+  background-color: blue;
+  color: aliceblue;
+  border: none;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: aqua;
+}
+
+input:focus,
+textarea:focus {
+  outline-color: blue;
+}
+
+footer {
+  background-color: blue;
+  color:aliceblue;
+  padding: 16px 0;
 }
